--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body {
   width: 50%;
   float: left;
   margin-top: 70px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   position: relative;
 }
 .cert img{
@@ -364,6 +364,10 @@ body {
 }
 #projects h3 a:hover{
   color: orange;
+}
+.click-info{
+  font-size: 1rem;
+  padding-top: 20px;
 }
 .projects-image {
   border-radius: 5px;
@@ -559,6 +563,9 @@ body {
     }
     #aboutme h2{
       font-size: 2rem;
+    }
+    #aboutme p{
+      padding: 25px;
     }
     .contact-container{
       width: 18rem;
